[package]
name = "my-no-sql-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
macros-utils = { tag = "0.1.0", git = "https://github.com/MyJetTools/macros-utils.git" }
types-reader = { tag = "0.1.1", git = "https://github.com/MyJetTools/types-reader.git" }

syn = { version = "*", features = ["extra-traits"] }
quote = "*"
proc-macro2 = "*"
